--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@heroicons/react": "^2.0.14",
     "@rajesh896/broprint.js": "^2.1.1",
     "@reduxjs/toolkit": "^1.9.1",
+    "@types/file-saver": "^2.0.5",
     "@types/js-cookie": "^3.0.2",
     "@types/node": "18.11.10",
-    "@types/react": "18.0.26",
+    "@types/react": "^18.0.27",
     "@types/react-dom": "18.0.9",
     "@types/redux-logger": "^3.0.9",
     "axios": "^1.2.0",
+    "file-saver": "^2.0.5",
     "iron-session": "^6.3.1",
     "js-cookie": "^3.0.1",
     "next": "13.0.6",
