--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.0.14",
     "@rajesh896/broprint.js": "^2.1.1",
     "@reduxjs/toolkit": "^1.9.1",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "@types/file-saver": "^2.0.5",
     "@types/js-cookie": "^3.0.2",
     "@types/node": "18.11.10",
