--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-top-loading-bar": "^2.3.1",
     "redux-logger": "^3.0.6",
     "tailwind-scrollbar-hide": "^1.1.7",
-    "typescript": "4.9.3"
+    "typescript": "4.9.3",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@types/react-responsive-masonry": "^2.1.0",
